missing api-ms-win-crt-runtime-l1-1-0-dll make sure your machine
has the latest Windows patches and/or download this:

https://www.microsoft.com/en-us/download/details.aspx?id=48145

This might also help with other hard crashes.

Additionally, if you see a black screen, start Mnemosyne with the
--qt-opengl=desktop command line argument.)


Mnemosyne 2.4.2

-Updated to PyQt 5.8.
-Scaling for high-definition displays now enabled by default.
 (start with --disable-high-dpi-scaling if you prefer the previous behaviour).
-Small performance optimisations in the database.
-Fix problems under Linux with some Japanese fonts (e.g. Google Noto fonts) 
 (fix by m4984).
-Fix keyboard shortcuts not working sometimes (reported by Angelika Blaschka).
-Improved compatibility with different Qt versions under Linux
 (reported by Huang Shuhan).
-Added warning if OpenGL libraries are missing under Linux
 (Andy Rayner).
-Try and work around cases where the progress bar after sync wouldn't
 close under Linux (reported by Kienan).
 

Mnemosyne 2.4.1 : 2017-01-30

-Updated to PyQt 5.7.1.
-Fix broken cramming plugin (reported by stevengeorg). 
-Fix encoding problems with import and export (reported by register2, 
 MarcoP, abacus).
-Improve subdirectory handling (reported by abacus, duncantaylor). 
-Make configuration storing more thread-safe.
-Warn if an old plugin needs to be updated. 
-Location and size of 'Add cards' window is saved again (reported by
 David Schuler).
-Fix removing tags through card browser (reported by bvauquelin).
-Fix loss of keyboard focus when switching back to the main window
 (reported by Jan Egil Hagen and Dan Schmidt).
-Fixed crash in card browser when working with forbidden tags 
 (reported by Benjamin Brueck). 
-Fix autoscaling of Q and A sometimes not working under Linux.
-Fix error related missing idna encoding when starting server 
 (reported by Andrea Giordano).
-Fix error related to upgrading from very old databases (reported by 
 David Schuler)