@@ -226,6 +226,7 @@ class QAOptimalSplit(object):
     def set_answer(self, text):
         #self.main_widget().show_information(text.replace("<", "&lt;"))        
         self.answer_text = text
+        
         #self.answer_preview.page().setPreferredContentsSize(\
         #    QtCore.QSize(self.answer.size().width(), 1))
         #self.answer_preview.setHtml(self.silence_media(text))
