@@ -13,6 +13,9 @@ Additionally, if you see a black screen, start Mnemosyne with the
 Mnemosyne 2.4.2
 
 -Updated to PyQt 5.8.
+-Added option to "Configure Mnemosyne" to affect how cards are displayed, 
+ in two boxes with fixed size, two boxes with adaptive size, or a single
+ box top aligned.
 -Scaling for high-definition displays now enabled by default.
  (start with --disable-high-dpi-scaling if you prefer the previous behaviour).
 -Small performance optimisations in the database.
